--- a/chrome.ipynb
+++ b/chrome.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import audio"
+    "from basic import audio\n",
+    "from feature import spectral"
    ]
   },
   {
@@ -24,8 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import specturm\n",
-    "import rosa"
+    "chroma_stft = spectral.chroma_stft(y=y, sr=sr)"
    ]
   },
   {
@@ -35,58 +35,27 @@
    "outputs": [
     {
      "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYwAAACXCAYAAAAGX2ymAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAG0pJREFUeJzt3Xu43FV97/H3Z19yIfeQEEqAAEKe\nilRAA5QjfbyhBY4ieDgewrGn+PCQ0yq1z0FRbPuopc+pHFrt6QWL8VLUU6FwPPIgpkBrxWIFucit\nCaIhEAigkBtJyE72npnv+eM3Gyd71trzm509+5L9efHMw57vrFm/NbMne83vt9Z3LUUEZmZmrXSN\ndwPMzGxycIdhZmaluMMwM7NS3GGYmVkp7jDMzKwUdxhmZlaKOwwzMyvFHYaNG0kXS/rBeLejkySd\nL+lZSbsknTze7THbH+4wzEaJpKclnTkk/OfAZRExOyIeypQxmxTcYdikoMJk/LwuA9aOdyPMRsNk\n/Adok5CkIyT9P0kvSdoi6W8aHvtzSdskPSXp7Ib4XZL+p6R/A3YDx0g6TNKtkrZKWi/p0obyn5Z0\ns6T/I2mnpMckLZf0CUkv1i8NvbOh/AckPV4vu0HSfy/xOhZJuk3S9nob7pbUJenrwJHAt+uXnz4u\naRfQDTwi6clEmY+NxntrNlbcYVjHSeoGbgM2AkcBS4Eb6w+fBjwBLAKuAb4sSQ1P/y1gFTCn/vwb\ngE3AYcAFwJ9KentD+XcDXwcWAA8Bd1B8zpcCVwFfaCj7IvAuYC7wAeAvJL2hxcv5SP34i4ElwB8A\nERG/BTwDvLt++el/RcTs+nNOjIjXJMpc0+JYZhOKOwwbC6dS/IG/IiJeiYg9ETE42L0xIr4YEVXg\nq8CvUPwhHnR9RKyNiApwKHAG8PF6HQ8DX6LoVAbdHRF31MvfTPGH/eqIGKDopI6SNB8gIr4TEU9G\n4fvAncBvtHgtA/U2LouIgYi4O7yCp00R7jBsLBxB0TFUEo/9fPCHiNhd/3F2w+PPNvx8GLA1InY2\nxDZSnD0M+kXDz33A5npnNHj/1folnS3p3vqlpe3AORRnOsP5M2A9cGf9MtaVLcqbHTDcYdhYeBY4\nUlLPCJ7b+O39eWChpDkNsSOB59qtVNJ04JsUs5iWRMR8YA2g4Z4XETsj4iMRcQzF5a/LGy6JlTnT\n8NmITVruMGws3Ae8AFwtaZakGZLe1G4lEfEs8EPgM/U6Xg9cAvz9CNo0DZgOvARU6oPt7xz+KSDp\nXZKOrY+z7ACq9RsUZzfHtKiiTBmzCckdhnVc/ZLQu4FjKQZ9NwH/ZYTVraQYOH8e+BbwqYj4pxG0\naSfwYeAmYBtwEXBriaceB/wzsAu4B/h8RNxVf+wzwB/VZ1B9NPP8MmXMJiR5vM7MzMrwGYaZ2QFG\n0lfquUf/nnlckv6qnsv0aInp5IA7DLMmkv6gnlg39PaP4902s5KuB84a5vGzKS6vHkeR5/S3ZSr1\nJSkzswOQpKOA2yLihMRjXwDuiogb6vefAN4SES8MV+dIpjl21Oyeg+Lg3vn7xF4eSHdqfexOxmvU\nkvFqdU8ynluiqEhQTsQTMy9zM0Yrtb5kPCLdxtGSamP9gbLBYWsfndLtHnccqN3XOhqvKV1Hrub8\nV77J+2Ww3fcx2nit7ZQt2pL++9Ctacl4f3X75ohY3NZBMn7zN0+NLVteboo/+OBP1wKNf9BWR8Tq\nNqpeyr45TpvqscnVYRzcO58rj913SZ87nh9Iln0ofpyM99d2JeNbXnkiGe/tmZ2MT++Zk4x3d01v\nis3sXpAs+4tdjyXj1doryXix9ND+68p0YOnOMddhthlvs55cGyeS7JeG3GtKvAddXe29TmU+A7lj\n5r58xKuzfcuV39+ykG9ju+W71NtWPbVo/htRq6XyRPNfKHOvdVr3rGR8Xs/hyfiGbbdsTD4wAls2\nv8yPftR8tain9+17ImLFflSd6pFb9qQd/RcrqQo8RtG4KsUyzz/s5DHNzA4cAZV0x7efNlGswDDo\ncIqp6sPq9KB3X0ScFBEnAp+gmINuZmZlREC12nzbf7cC/60+W+rXgZdbjV/A2F6SmkuRIGVmZmVE\nQH9/20+TdAPwFmCRpE3Ap4Deosq4jmIZnHMo1kXbTbFac0ud7jBmSnoYmEGxwufbUoUkraKY2sXC\n3nkdbpKZ2SQRgartX5KKiJUtHg/gQ+3W2+kOoy8iTgKQdDrwNUknDF0Ouj66vxpg2czDJu/UDjOz\n0RRAZVQuQY2KMbskFRH3SFpEsT/Bi2N1XDOzSSs6Nug9ImPWYUj6VYo5o1vG6phmZpNbwAguSXXK\nWI1hQDG19rcbNrMxM7PhREydS1IRMTpZaGZmU1EEGkgnLo+HCZdqO7u3yhmH7Dv79uK3pa9ibd24\nNBmfe/DeZPy93zw9Gb/gyIOS8YtOW59u43uPaorFia9Llv3mueuS8Ue3pzNZZ3Snx/xnZ35Ti6en\nv30snp6einfIzOalSg6ek15iZcbM9Ae1d0Y6I7YnE08kxgOQS/RObeRaSTeRPTvS7+PLL89Mxrf0\npePb96aXedhTS6cq1TJTMw7qbn4PFs9ML0mzZN7OZHzB4eny018zIxnvWpB+TbE3cymjP5MBnntR\nKZmy6smkdnVllvrIxTP11H6RXiFh50+a27PphfTqCxt3pTO3n+tLfwY27Eq38emd6fd3A7ck4yMS\nTM0xDDMza9NUuiRlZmb7I0Yrs3tUuMMwM5uopmoehpmZtWmq5mGYmVmbImDAHYaZmbXiS1JmZlaO\nZ0mZmVkZ4VlSw5q5fD7H/9N5pcoe2mbdp33/7mR81ZXpbTpqF16SjrdxzNfOvycZ3zGQTirqyeQx\nLZmRTsQ7ck56O9pDD9mRjM9e1tz6nmXpLWq1MLPU/Ox0AhkzM/FZ6cQyujMLAfQlEte2p5PcZv+i\neb9jgHkb0vGDn06/X1u3pJO5dmUS+vqr6bbP7G2+3nzIgvQx5x2T/p1Oe+OSZDxOPykZry1NbxU6\nHjq91HTXc5uS8fn3NW+FPOuB9H5ACx9PJ/8t2JJJ9HslvVXz/dVHkvFRNcEuSXV6xz0zMxupCOiv\nNN9KkHSWpCckrZd0ZeLxIyV9T9JDkh6VdE6rOjveYUg6X1LUV6s1M7OyAqjWmm8tSOoGrgXOBo4H\nVko6fkixPwJuioiTgQuBz7eqdyzOMFYCP6BokJmZlVYf9B56a+1UYH1EbIiIfuBG4D3NlTO3/vM8\n4PlWlXa0w5A0G3gTcAnuMMzM2hNApdZ8K/bqfqDhtmrIM5cCzzbc31SPNfo08P76nt9rgN9r1ZxO\nD3qfB9weET+VtFXSGyLix0MLNe7pfeSR6QE/M7MpJ4KoJC9BbY6IFcM8MzV9ZuichJXA9RHx2foW\n2l+vb6GdvebV6UtSKylOhaj/P7kxeUSsjogVEbFi8eLMzBwzs6lmhGMYFGcURzTcP5zmS06XADdB\nsYU2MANYNFylHTvDkHQw8DbgBElBsT1rSPpYRHR69p2Z2eQXkd2/pIX7geMkHQ08RzEkcNGQMs8A\nbweul/Raig7jpeEq7eQZxgXA1yJiWUQcFRFHAE8BZ3TwmGZmB46AqNSabi2fFlEBLgPuAB6nmA21\nVtJVks6tF/sIcKmkR4AbgItbfZnv5BjGSuDqIbFvUvRy6Qw6MzP7pYjBQe4RPDXWUAxmN8Y+2fDz\nOopJSaV1rMOIiLckYn/V6nlb1+3kH1Z8b5/Yef9hQ7Lst+85Ohlfvyv9sr7w0neS8Wmf/o/pei6/\nKxl/fO+LTbG5kc6WfrrrmWR8a//3kvFaJo98Wnc6E7m3K51F3aN01nUvzeWnkz7l7SG9VWhX5sS0\nN9JZ0T20t7V7rY184QGls6X3ZuroV3qv12psT8Yj897kfk/dNG8Z26P0HrUzvpv+zMxcnX7fD4p0\nZnGv/j0Zn0hXfqXMEgYZPckxWxjIjMfuSvxe+5T+PO5WehWAvfFcunw1vUX0jr70v+3RFEBUJ87v\nccItDWJmZnWD02onCHcYZmYTVUBUfIZhZmatRBD97jDMzKyVmFhjGG1Nq5W0QNLrO9UYMzPbV1Sa\nb+OlZYch6S5JcyUtBB4B/k7S5zrfNDOzqS1iknUYwLyI2AG8F/i7iHgjcGZnm2VmZsUlqebbeCnT\nYfRI+hXgfcBtHW6PmZkNmmBnGGUGva+iSC//QUTcL+kY4GedbZaZmRFQG2gv6bGTWnYYEXEzcHPD\n/Q3Af+pUgxYurnDhpftmUv/x55Ynyz62NZ3l+6vz02/wtK50Zu33X0zvufzjyu3JeN9A8x7gs6Yv\nTpbdtTu9r/BAJZNZPA5fH5TJqs2JTBZ1tp42s3zbkztJbjfZaex3K273fW9X7vc0GXT6vWmHMqsp\njIVA1KoT570oM+h9TX3Qu1fSdyVtlvT+MpVLWiLpG5I2SHpQ0j2Szt//ZpuZTQEBtUrzbbyU+Vr1\nzvqg97so1lhfDlzR6kkqFo+5BfjXiDimPlh+IcW67GZm1kIE1KpdTbfxUmYMY3A1tXOAGyJia8mF\nxN4G9EfEdYOBiNgI/HXbrTQzm6JqtYlzSapMh/FtST8B+oAPSloMmWVM9/U6oGk7VjMzK6c4w5g4\nHUbLc5uIuBI4HVgREQPAK8B72j2QpGslPSLp/sRjqwY3M39pV1+7VZuZHZhCVCpdTbcyJJ0l6QlJ\n6yVdmSnzPknrJK2V9I1WdZZdS2op8A5pn00WvtbiOWtpmE0VER+StAh4YGjBiFgNrAZYseyQyTu1\nw8xsFAVQq7U/ZiGpG7gWeAfF2PP9km6tb5o0WOY44BPAmyJim6RDWtVbZpbUpyjGHf4aeCtwDXDu\nsE8q/AswQ9LvNsQOKvE8MzMDCFGtdjXdSjgVWB8RGyKiH7iR5itDlwLXRsQ2gIho3hluiDJHvoBi\no/CfR8QHgBOB9BZiDep7w54HvFnSU5LuA74KfLzEMc3MprwAqjU13YBFg5fx67dVQ566FHi24f6m\neqzRcmC5pH+TdK+ks1q1p8wlqb6IqEmqSJoLvAgcU+J5RMQLFFNpzcysTUWHkfxevzkiVgzz1NRI\n+dDL/T3AccBbKNId7pZ0QkRmv2LKdRgPSJoPfBF4ENgF3FfieSPy9PM9XHLVofvEfrInfab0ojYl\n41/69XnJ+MKH3pyMX/vz9Ms5tveMZPyprqZxe+b2HJYsu6c7vX9w7uSuUt2ZjEvp8m1nhmf2RG6z\nklGoA9rPxu5UHSOpp/x15XwGfK6OdDz3Gcgft5PS+7Tn2qg2X5OU/tPUznuQO+ZoqWX+7VWrW0fv\nIAHVGNFvchNwRMP9w4HnE2XurU9mekrSExQdSPMfuLoyS4N8sP7jdZJuB+ZGxKPttNzMzNoXiEo1\n3Tm3cD9wnKSjgecorvRcNKTMLcBK4Pr6hKTlwIbhKs12GJLeMNxjEeEcCzOzDopgcMyizedFRdJl\nFAvHdgNfiYi1kq4CHoiIW+uPvVPSOqAKXBERW4ard7gzjM8O1x6KTG4zM+ugEV6SIiLWAGuGxD7Z\n8HMAl9dvpWQ7jIh46wjaaGZmoyQQlRi/taOGKpOH8aH6oPfg/QWSPjjcc8zMbP8NM612XJTpui5t\nnGZVT/K4tHNNMjMz4NVZUkNv46XMtNouSapf7xpMOZ/W2WaZmVkgBkawNEinlOkw7gBuknQdxRnS\n7wDprejMzGzUBCMf9O6EMh3Gx4FVwO9S5ALdCXypk40yM7PCpOowIqIGXFe/ddzeqPJk377Z0c9o\nXbLs9r6nk/EF5703Gf/Ih2cl42f94WuS8c196b18r/vZOU2xz6xIZ6O/0n9UMr6lb0YyvmOgNxmf\n0V1Nxndnknq6lc7GHkgMmOU+kJHJFa5lEr1TdQN0ZT7vlUw90cY/kNHK887JvY85PYmm5+rIvS/K\nZNL3dqXjuzPLXW8fSH82dlbSB96T/ogldWfaPj2TYza/N/2bWjgtfdDF0/cm43N6B9LtSbw3uc9p\nTu738dDW9MoR39mUPsBNm/+kvQMPIwIqk6nD2F+SqsBjDaHzIuLpTh/XzGyym4yXpPZXX0ScNAbH\nMTM7wIzvrKihxqLDMDOzEQjyl3rHQ8sOQ9Jy4ApgWWP5iCi7NMhMSQ/Xf34qIs5PHGMVxcA60zWn\nZLVmZge2GPlqtR1R5gzjZooB7y9SLFDVrpaXpBq3aJ3Ts8RbtJqZUZxh5CaHjIcyHUYlIv624y0x\nM7N9TJpBb0kL6z9+u7521LeAV+e6RcQo7hJiZmYp1UlyhvEgRQc32L1d0fBYUHKbVjMzG5lJc4YR\nEUePxgEiYvZo1GNmNtVEwMAIs1MlnQX8JcUGSl+KiKsz5S6gGKs+JSIeGK7OMrOkPgT8/eCKtZIW\nACsj4vNttr+Uvezh6a59M7t397/UXiVd6czX2ilvTMZfe2c63v8/vpyMr3hdc2zW5b+RPuby5cm4\n2WjR80O3aq7HH1qbjNfWp1clqG5pzq6u9WWuh2T+iHXPS//b616a/t6oo5ck43F84h8ZEIcemj5w\nBx2fif/XTPym7tHL9B5pHkZ9kdhrgXdQ7N19v6RbI2LdkHJzgA8DPypTb8eXN5dUlfRww+3Kss81\nM5vKBmdJDb2VcCqwPiI2REQ/cCPwnkS5PwGuAfaUqXQsljd3preZ2QgUYxjJhxZJarx8tLqenjBo\nKfBsw/1NwGmNFUg6GTgiIm6T9NEy7SnTYdyJlzc3Mxt7ke0wNkfEimGembqO9WpNkrqAvwAubqc5\nZTqMj9G8vPkX2zhGY6Y3wGci4h8aCzRmend3pVdxNTObaoY5w2hlE3BEw/3DgcbBrjnACcBdkgAO\nBW6VdO5wA99lOozfi4i/pGF5c0m/TzH6XkZbmd7TeuZNoFnHZmbjZz/WkrofOE7S0cBzwIXARa/W\nG/EysGjwvqS7gI+2miVVZtD7txOxi0s8z8zM9sPgGcbQW8vnRVSAyyh2TH0cuCki1kq6StK5I23P\ncJneKyl6pKMl3drw0Bxgy0gPaGZmJQVUY2QXXSJiDbBmSOyTmbJvKVPncJekfgi8QHHa8tmG+E7g\n0TKV1w0dw7g9Ijy11syshf0Yw+iI4TK9NwIbgdP35wARkdm0Ma1a28u2PU/tE9u959lk2cgsnnvl\nFemtWKsf/ddkvD+zBu+jOw5JxmdpelPssO+8kCy7c+C5ZHxT/470QdtUy2RQVZV+Uanykamjokpb\nx8zVU2tzkeNUPTW1V3euLe1S5qptF+mPdW80fzZ6M7PQuyP9z6830tv0Tm9rNjsMkP79VZWeWFKj\nue1dmW16s23P/EmZqXR8Vne6jbN7n0jGZ/T8NBkvc219kDJDArkv8kvSOzXzn49qM6F4hKqd3oe4\nDcNdkvpBRJwhaSfss8mwgIiIuR1vnZnZFDZpljePiDPq//eORmZm4yACKpPkDGMGRZLesRRjFl+p\nj7ybmdkYCGLEg96dMNyg91eBAeBu4BzgdcDvj0WjzMysMCkGvYHjI+LXACR9GbhvbJpkZmYwiS5J\nUZxdAEUSiHJTC8zMrCOKabUT5xRjuA7jREmDcz9FkU+xA8+SMjMbM5Oiw2g3f8LMzEZXAJXaJOgw\nzMxsfEVAZTKcYYyXnq4ZLJpx3D6xl7vTqZa7+9NLWn13W3rLyqeq6XH7vZWdyXh3V3PmK8DvHPK+\nptjKZduSZa9e296Vu7mZLNyc3HhYNdKP7P3l0NQvY+rP1J2uoyeT5ZvLiu7JZEXnDCTa2E+6jdVE\nWchnerebuZ2TO+5e7W6K7WFXsmw2Sz2T1Z5ToXlrVYCBWnNbAAaqfcl4tZbYojWX1Z/5fOUU2y80\n6xrIxPtzn7H07ym36kM7cq9p/ivLkvGfbO/8vnCTaVqtmZmNsynRYUiqAo8BvUCFIq/jf0e7X03M\nzKaoYpbUxPmT2ckzjFc3TpJ0CPANYB7wqQ4e08zsgBFAhYlzhtHOIo8jFhEvUmzBepmc0GFmVkoQ\nDES16VaGpLMkPSFpvaSmLSUkXS5pnaRHJX1XUnqwpsGYdBgAEbGhfrymNcMlrZL0gKQHqpEe3DQz\nm3qCauK/ViR1A9cCZwPHAyslHT+k2EPAioh4PfB/gWta1TtmHUZd8uwiIlZHxIqIWNGt9tb8NzM7\nUBWXpKpNtxJOBdZHxIaI6AduBN6zT90R34uIwal09wKHt6p0zGZJSToGqAIvjtUxzcwmsyBym6Et\nkvRAw/3VEbG64f5SoHHnuU3AacMc6hLgH1u1Z0w6DEmLgeuAv4mYQHPEzMwmtKCa3jlxc0SsGOaJ\nqas5yb+9kt4PrADe3Ko1newwBvfyHpxW+3Xgcx08npnZASXIb5XcwibgiIb7hwNNGc2SzgT+EHhz\nRKQzQBt0rMMY6VpUc7sO4syZp+wT29p1crLsC93pfbEP6UpvEriuL52NXa2lB9qnTU/vDX7KwuYs\n3187J92WC3bOTsY37l6QjC+alslQVvrErBrpSWe7q+n4tv7m+JbMx6Qvszfk9O503Qunp+OzetL1\n5JbI2THQXM+2venCO/pze32ny8/oTg/bzexpb/Le3swmBTsSG8TvrGSywjOzXXL7aOcmGPZHuv7t\nXS8n4zu70isk9EXzv4+BWjorvJY5Zk6X0vuU5zLvizHbZpF5z1KfpXbbmLOl/8lk/Jbdj45K/cMJ\nagxkMvlbuB84TtLRwHPAhcBFjQUknQx8ATirPpO1JWd6m5lNUMUYRvtnGPUtKS4D7gC6KXZMXSvp\nKuCBiLgV+DNgNnBz/cvIMxFx7nD1usMwM5uwIrtuWctnRqwB1gyJfbLh5zPbrdMdhpnZBFUsPjg6\nl9ZGgzsMM7MJa+RnGJ3gDsPMbIIKYtQG70eDOwwzswkqCCqtZ7uOGXcYZmYTVXgMw8zMSiguSY0o\nca8j3GGYmU1YHsMYVk+XWDJz3+zP23ffmyz74u51yXhu/+D+gc2Zo6azhXfUXknGP/izf26KXfrH\n6bKVxD7JAAPV9H7Luba3K7exYTre3r7N+TZm9mfuau9jljpufqPGdncj6/QCzeXb0+7mk7l9yvP1\nZ/Y7b+e9HK/d3kbj38FotV2Zz+8YfPMvptVOnDOMji9vLulQSTdKerK+WccaScs7fVwzs0kvgmpt\nb9NtvHT0DKO+u963gK9GxIX12EnAEuCnnTy2mdlkFwS12sQ5w+j0Jam3AgMRcd1gICIe7vAxzcwO\nEFNr0PsE4MFWhSStotjzm7k98zrcJDOzySKICdRhjPUWrUmNW7Qe1J1eUtzMbKqJgFpUmm7jpdMd\nxlrgjR0+hpnZASqIGGi6jZdOdxj/AkyXdOlgQNIpklpuBWhmZjWi1t90Gy8d7TDq+3efD7yjPq12\nLfBpElsFmplZs6DadBsvKv6mTxySXgI2jnc7zMxGaFlELB6NiiTdDixKPLQ5Is4ajWO01Z6J1mGY\nmdnENCFmSZmZ2cTnDsPMzEpxh2FmZqW4wzAzs1LcYZiZWSnuMMzMrBR3GGZmVoo7DDMzK8UdhpmZ\nlfL/ASQTV37jw+7eAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "array([[ True,  True,  True, ...,  True,  True,  True],\n",
-       "       [ True,  True,  True, ...,  True,  True,  True],\n",
-       "       [ True,  True,  True, ...,  True,  True,  True],\n",
-       "       ..., \n",
-       "       [ True,  True,  True, ...,  True,  True,  True],\n",
-       "       [ True,  True,  True, ...,  True,  True,  True],\n",
-       "       [ True,  True,  True, ...,  True,  True,  True]], dtype=bool)"
+       "<matplotlib.figure.Figure at 0x7f4545823150>"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "specturm.stft(y) == rosa.stft(y)"
+    "import librosa.display\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.subplot(2,1,1)\n",
+    "librosa.display.specshow(chroma_stft, y_axis='chroma')\n",
+    "plt.title('chroma_stft')\n",
+    "plt.colorbar()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ True,  True,  True, ...,  True,  True,  True],\n",
-       "       [ True,  True,  True, ...,  True,  True,  True],\n",
-       "       [ True,  True,  True, ...,  True,  True,  True],\n",
-       "       ..., \n",
-       "       [ True,  True,  True, ...,  True,  True,  True],\n",
-       "       [ True,  True,  True, ...,  True,  True,  True],\n",
-       "       [ True,  True,  True, ...,  True,  True,  True]], dtype=bool)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import librosa\n",
-    "rosa.stft(y) == librosa.stft(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
