--- a/chord-recognition/data_process.ipynb
+++ b/chord-recognition/data_process.ipynb
@@ -3057,10 +3057,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from chord_labels import parse_chord\n",
+    "parse_chord(\"C:min7\").tones_binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "x.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dataset = np.load('../data/dataset_2016-05-15.npz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = dataset['X_train']\n",
+    "X_valid = dataset['X_valid']\n",
+    "X_test = dataset['X_test']\n",
+    "y_train = dataset['Y_train']\n",
+    "y_valid = dataset['Y_valid']\n",
+    "y_test = dataset['Y_test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pylab inline\n",
+    "import scipy.signal\n",
+    "\n",
+    "def plot_labels(l, fifths=False, resample=True):\n",
+    "    figure(figsize=(20,5))\n",
+    "    if fifths:\n",
+    "        l = l[:,np.arange(12)*7 % 12]\n",
+    "    l = l.T\n",
+    "    if resample:\n",
+    "        l = scipy.signal.resample(l, 200, axis=1)\n",
+    "    imshow(l, cmap='gray', interpolation='none')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training score: 0.3024036032316076\n",
+      "validation score: 0.26550085393925893\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "\n",
+    "log_reg = OneVsRestClassifier(LogisticRegression())\n",
+    "log_reg.fit(X_train, y_train)\n",
+    "\n",
+    "print('training score:', log_reg.score(X_train, y_train))\n",
+    "print('validation score:', log_reg.score(X_valid, y_valid))"
+   ]
   }
  ],
  "metadata": {
